--- a/requirements.txt
+++ b/requirements.txt
@@ -30,3 +30,5 @@ pypdf>=4.0            # PDF 輔助工具
 Pillow>=10.0          # 處理圖片/縮圖
 beautifulsoup4>=4.12  # 若有網頁解析需求可留，不佔空間
 markdown2>=2.4        # 渲染 Markdown 摘要
+
+pdf2image==1.17.0
